[gd_scene load_steps=15 format=3 uid="uid://5wrt8iit786d"]

[ext_resource type="Script" path="res://Views/pre_game/pre_game.gd" id="1_yi5tk"]
[ext_resource type="PackedScene" uid="uid://brpe030wttgwg" path="res://Views/pre_game/deck_selector.tscn" id="2_osjdq"]
[ext_resource type="PackedScene" uid="uid://dhql4t8810uip" path="res://Views/pre_game/formation_selector.tscn" id="3_rrcj6"]
[ext_resource type="Script" path="res://Views/pre_game/control.gd" id="4_dujot"]
[ext_resource type="Texture2D" uid="uid://i6qfwa1enryq" path="res://assets/fondo/fondo_main_page.jpeg" id="4_ws0ws"]
[ext_resource type="Texture2D" uid="uid://46q8mxd534gn" path="res://assets/players/countries/flecha-derecha.png" id="5_3h7e4"]
[ext_resource type="StyleBox" uid="uid://1jmpjhepq6et" path="res://styles/button_green_styles_hover.tres" id="5_gabjx"]
[ext_resource type="Texture2D" uid="uid://bwkq05nu12my4" path="res://assets/players/countries/flecha-izquierda.png" id="6_c8s5w"]
[ext_resource type="StyleBox" uid="uid://d1n6cshtrvcay" path="res://styles/button_green_style.tres" id="6_lvui4"]
[ext_resource type="Script" path="res://Views/pre_game/control_2.gd" id="7_inoag"]
[ext_resource type="StyleBox" uid="uid://by2qbg25pw6k3" path="res://styles/button_blue_styles_hover.tres" id="11_6qcwc"]
[ext_resource type="StyleBox" uid="uid://bb2xqcqx2i3mc" path="res://styles/button_blue_style.tres" id="12_oncx7"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_rjo4q"]
bg_color = Color(0, 0.234667, 0.32, 0.807843)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_x2dtm"]
bg_color = Color(0, 0.235294, 0.321569, 0.807843)
corner_radius_top_left = 8
corner_radius_top_right = 8
corner_radius_bottom_right = 8
corner_radius_bottom_left = 8

[node name="pre_game" type="CanvasLayer"]
script = ExtResource("1_yi5tk")
deck_selector = ExtResource("2_osjdq")
formation_selector = ExtResource("3_rrcj6")

[node name="TextureRect" type="TextureRect" parent="."]
modulate = Color(0.339095, 0.339095, 0.339095, 1)
offset_left = -2.0
offset_right = 1161.0
offset_bottom = 655.0
texture = ExtResource("4_ws0ws")
expand_mode = 1

[node name="Button" type="Button" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -171.0
offset_top = 25.0
offset_right = -24.0
offset_bottom = 56.0
grow_horizontal = 0
theme_override_styles/focus = ExtResource("11_6qcwc")
theme_override_styles/hover = ExtResource("11_6qcwc")
theme_override_styles/pressed = ExtResource("12_oncx7")
theme_override_styles/normal = ExtResource("12_oncx7")
text = "Comenzar partida"

[node name="ErrorLabel" type="Label" parent="."]
modulate = Color(0.921569, 0, 0.101961, 1)
offset_left = 981.0
offset_top = 58.0
offset_right = 1128.0
offset_bottom = 118.0
autowrap_mode = 2

[node name="Label" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -72.5
offset_top = 16.0
offset_right = 72.5
offset_bottom = 39.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 30
text = "¡Prepara tu equipo!"

[node name="menu_player_1" type="Panel" parent="."]
clip_contents = true
offset_left = 192.0
offset_top = 118.0
offset_right = 381.0
offset_bottom = 476.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rjo4q")

[node name="player 1" type="VBoxContainer" parent="menu_player_1"]
custom_minimum_size = Vector2(576, 500)
layout_direction = 1
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = -192.0
offset_top = -328.0
offset_right = 384.0
offset_bottom = 172.0
grow_vertical = 0

[node name="Label" type="Label" parent="menu_player_1/player 1"]
layout_mode = 2
text = "Jugador 1"
horizontal_alignment = 1

[node name="separator" type="Label" parent="menu_player_1/player 1"]
layout_mode = 2
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="menu_player_1/player 1"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="deck button" type="Button" parent="menu_player_1/player 1/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("5_gabjx")
theme_override_styles/hover = ExtResource("5_gabjx")
theme_override_styles/pressed = ExtResource("6_lvui4")
theme_override_styles/normal = ExtResource("6_lvui4")
text = "Arma tu mazo"

[node name="formation button" type="Button" parent="menu_player_1/player 1/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("5_gabjx")
theme_override_styles/hover = ExtResource("5_gabjx")
theme_override_styles/pressed = ExtResource("6_lvui4")
theme_override_styles/normal = ExtResource("6_lvui4")
text = "Elige tu formación
"

[node name="DT button" type="Button" parent="menu_player_1/player 1/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Elige tu DT
"

[node name="separator2" type="Label" parent="menu_player_1/player 1"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label2" type="Label" parent="menu_player_1/player 1"]
layout_mode = 2
text = "Elige tu equipo"
horizontal_alignment = 1

[node name="separator3" type="Label" parent="menu_player_1/player 1"]
layout_mode = 2
horizontal_alignment = 1

[node name="Control" type="Control" parent="menu_player_1/player 1"]
layout_mode = 2
script = ExtResource("4_dujot")

[node name="TextureRect" type="TextureRect" parent="menu_player_1/player 1/Control"]
layout_mode = 0
offset_left = 268.0
offset_right = 308.0
offset_bottom = 40.0
expand_mode = 1

[node name="RightButton" type="Button" parent="menu_player_1/player 1/Control/TextureRect"]
layout_mode = 0
offset_left = 49.0
offset_top = -3.0
offset_right = 85.0
offset_bottom = 42.0
icon = ExtResource("5_3h7e4")
expand_icon = true

[node name="LeftButton" type="Button" parent="menu_player_1/player 1/Control/TextureRect"]
layout_mode = 0
offset_left = -45.0
offset_top = -3.0
offset_right = -9.0
offset_bottom = 42.0
icon = ExtResource("6_c8s5w")
expand_icon = true

[node name="Confirm" type="VBoxContainer" parent="menu_player_1/player 1/Control"]
layout_mode = 2
offset_top = 58.0
offset_right = 576.0
offset_bottom = 89.0

[node name="ConfirmButton" type="Button" parent="menu_player_1/player 1/Control/Confirm"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("11_6qcwc")
theme_override_styles/hover = ExtResource("11_6qcwc")
theme_override_styles/pressed = ExtResource("12_oncx7")
theme_override_styles/normal = ExtResource("12_oncx7")
text = "Confirmar"

[node name="ErrorLabel" type="Label" parent="menu_player_1/player 1/Control"]
modulate = Color(0.921569, 0, 0.101961, 1)
layout_mode = 2
offset_top = 135.0
offset_right = 576.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1

[node name="menu_player_2" type="Panel" parent="."]
clip_contents = true
offset_left = 763.0
offset_top = 118.0
offset_right = 952.0
offset_bottom = 476.0
theme_override_styles/panel = SubResource("StyleBoxFlat_rjo4q")

[node name="player 2" type="VBoxContainer" parent="menu_player_2"]
custom_minimum_size = Vector2(576, 500)
layout_mode = 1
anchors_preset = 3
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = -381.0
offset_top = -321.0
offset_right = 195.0
offset_bottom = 179.0
grow_horizontal = 0
grow_vertical = 0

[node name="Label" type="Label" parent="menu_player_2/player 2"]
layout_mode = 2
text = "Jugador 2"
horizontal_alignment = 1

[node name="separator" type="Label" parent="menu_player_2/player 2"]
layout_mode = 2
horizontal_alignment = 1

[node name="Buttons" type="VBoxContainer" parent="menu_player_2/player 2"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="deck button" type="Button" parent="menu_player_2/player 2/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("5_gabjx")
theme_override_styles/hover = ExtResource("5_gabjx")
theme_override_styles/pressed = ExtResource("6_lvui4")
theme_override_styles/normal = ExtResource("6_lvui4")
text = "Arma tu mazo"

[node name="formation button" type="Button" parent="menu_player_2/player 2/Buttons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("5_gabjx")
theme_override_styles/hover = ExtResource("5_gabjx")
theme_override_styles/pressed = ExtResource("6_lvui4")
theme_override_styles/normal = ExtResource("6_lvui4")
text = "Elige tu formación
"

[node name="DT button" type="Button" parent="menu_player_2/player 2/Buttons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
disabled = true
text = "Elige tu DT
"

[node name="separator2" type="Label" parent="menu_player_2/player 2"]
layout_mode = 2
horizontal_alignment = 1

[node name="Label2" type="Label" parent="menu_player_2/player 2"]
layout_mode = 2
text = "Elige tu equipo"
horizontal_alignment = 1

[node name="separator3" type="Label" parent="menu_player_2/player 2"]
layout_mode = 2
horizontal_alignment = 1

[node name="Control2" type="Control" parent="menu_player_2/player 2"]
layout_mode = 2
script = ExtResource("7_inoag")

[node name="TextureRect" type="TextureRect" parent="menu_player_2/player 2/Control2"]
layout_mode = 0
offset_left = 268.0
offset_top = -7.0
offset_right = 308.0
offset_bottom = 33.0
expand_mode = 1

[node name="RightButton" type="Button" parent="menu_player_2/player 2/Control2/TextureRect"]
layout_mode = 0
offset_left = 45.0
offset_top = -2.0
offset_right = 80.0
offset_bottom = 43.0
icon = ExtResource("5_3h7e4")
expand_icon = true

[node name="LeftButton" type="Button" parent="menu_player_2/player 2/Control2/TextureRect"]
layout_mode = 0
offset_left = -41.0
offset_top = -2.0
offset_right = -6.0
offset_bottom = 43.0
icon = ExtResource("6_c8s5w")
expand_icon = true

[node name="Confirm" type="VBoxContainer" parent="menu_player_2/player 2/Control2"]
layout_mode = 2
offset_top = 51.0
offset_right = 576.0
offset_bottom = 82.0

[node name="ConfirmButton" type="Button" parent="menu_player_2/player 2/Control2/Confirm"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_styles/focus = ExtResource("11_6qcwc")
theme_override_styles/hover = ExtResource("11_6qcwc")
theme_override_styles/pressed = ExtResource("12_oncx7")
theme_override_styles/normal = ExtResource("12_oncx7")
text = "Confirmar"

[node name="ErrorLabel" type="Label" parent="menu_player_2/player 2/Control2"]
modulate = Color(0.922094, 0, 0.103637, 1)
layout_mode = 2
offset_left = 7.0
offset_top = 128.0
offset_right = 583.0
offset_bottom = 151.0
theme_override_colors/font_color = Color(1, 0, 0, 1)
horizontal_alignment = 1

[node name="Line2D" type="Line2D" parent="."]
position = Vector2(0, 147.444)
scale = Vector2(1, 0.722222)
points = PackedVector2Array(576, 0, 576, 500)
width = 2.0
default_color = Color(1, 1, 1, 0.270588)

[node name="game_mode" type="Panel" parent="."]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -165.0
offset_top = -110.0
offset_right = 166.0
offset_bottom = -24.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_x2dtm")

[node name="Label" type="Label" parent="game_mode"]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -65.0
offset_top = 8.0
offset_right = 65.0
offset_bottom = 31.0
grow_horizontal = 2
text = "Modo de victoria"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBoxContainer" type="HBoxContainer" parent="game_mode"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -104.5
offset_top = 4.0
offset_right = 104.5
offset_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2

[node name="goals" type="Label" parent="game_mode/HBoxContainer"]
layout_mode = 2
text = "Por goles"

[node name="CheckButton" type="CheckButton" parent="game_mode/HBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
button_pressed = true
expand_icon = true

[node name="time" type="Label" parent="game_mode/HBoxContainer"]
layout_mode = 2
text = "Por tiempo"

[connection signal="button_up" from="Button" to="." method="_on_start_game"]
[connection signal="button_up" from="menu_player_1/player 1/Buttons/deck button" to="." method="_on_player_1_select_deck"]
[connection signal="button_up" from="menu_player_1/player 1/Buttons/formation button" to="." method="_on_player_1_select_formation"]
[connection signal="pressed" from="menu_player_1/player 1/Control/TextureRect/RightButton" to="menu_player_1/player 1/Control" method="_on_right_button_pressed"]
[connection signal="pressed" from="menu_player_1/player 1/Control/TextureRect/LeftButton" to="menu_player_1/player 1/Control" method="_on_left_button_pressed"]
[connection signal="pressed" from="menu_player_1/player 1/Control/Confirm/ConfirmButton" to="menu_player_1/player 1/Control" method="_on_button_pressed"]
[connection signal="button_up" from="menu_player_2/player 2/Buttons/deck button" to="." method="_on_player_2_select_deck"]
[connection signal="button_up" from="menu_player_2/player 2/Buttons/formation button" to="." method="_on_player_2_select_formation"]
[connection signal="pressed" from="menu_player_2/player 2/Control2/TextureRect/RightButton" to="menu_player_2/player 2/Control2" method="_on_right_button_pressed_p2"]
[connection signal="pressed" from="menu_player_2/player 2/Control2/TextureRect/LeftButton" to="menu_player_2/player 2/Control2" method="_on_left_button_pressed_p2"]
[connection signal="pressed" from="menu_player_2/player 2/Control2/Confirm/ConfirmButton" to="menu_player_2/player 2/Control2" method="_on_confirm_button_pressed"]
